* Correção cros. * Correção credenciais broker

--- a/src/AgroSolutions.Ingestion.Service.Api/appsettings.json
+++ b/src/AgroSolutions.Ingestion.Service.Api/appsettings.json
@@ -11,8 +11,8 @@
   },
   "MessageBroker": {
     "Host": "localhost",
-    "Username": "guest",
-    "Password": "guest"
+    "Username": "admin",
+    "Password": "admin123"
   },
   "JwtSettings": {
     "SecretKey": "AgroSolutions-SecretKey-For-JWT-Token-Generation-2024",
