--- a/src/AgroSolutions.Ingestion.Service.Application/AgroSolutions.Ingestion.Service.Application.csproj
+++ b/src/AgroSolutions.Ingestion.Service.Application/AgroSolutions.Ingestion.Service.Application.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="MassTransit" Version="8.3.0" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
 	</ItemGroup>
 
   <ItemGroup>
