--- a/src/AgroSolutions.Ingestion.Service.Api/AgroSolutions.Ingestion.Service.Api.csproj
+++ b/src/AgroSolutions.Ingestion.Service.Api/AgroSolutions.Ingestion.Service.Api.csproj
@@ -26,6 +26,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.2" />
+		<PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
 	</ItemGroup>
 
 	<ItemGroup>
